--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<mat-toolbar color="primary">
+  <span>OSCM Asynchronous Provisioning Platform</span>
+</mat-toolbar>
+
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -17,4 +21,3 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
-
