--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '../../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+@import 'abstracts/variables';
+@import 'abstracts/mixins';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Roboto', sans-serif; }
