--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
-
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 @import 'abstracts/variables';
 @import 'abstracts/mixins';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: 'Roboto', sans-serif; }
+
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  background: #f2f2f2;
+}
+
+.mat-list-item-content {
+  padding: 0 12px !important;
+}
+
+.active-link {
+  background: rgba(0, 0, 0, 0.1) !important;
+  .mat-line {
+    font-weight: 500 !important;
+  }
+}
