--- a/src/chrome/nav/style.scss
+++ b/src/chrome/nav/style.scss
@@ -11,3 +11,9 @@
 .mat-list-item, .mat-list-item-content {
   height: 40px !important;
 }
+
+.app-nav-header {
+  padding: 16px 16px 4px 16px;
+  font-size: 14px;
+  color: gray;
+}
