Extract nav items section

--- a/src/chrome/nav/style.scss
+++ b/src/chrome/nav/style.scss
@@ -12,6 +12,10 @@
   height: 40px !important;
 }
 
+.mat-divider {
+  margin-top: 16px;
+}
+
 .app-nav-header {
   padding: 16px 16px 4px 16px;
   font-size: 14px;
