Fix merge conflicts

--- a/src/chrome/nav/style.scss
+++ b/src/chrome/nav/style.scss
@@ -21,3 +21,11 @@
   font-size: 14px;
   color: gray;
 }
+
+.app-collapsed {
+  margin-left: 64px !important;
+}
+
+.mat-drawer {
+  overflow-y: unset;
+}
