--- a/src/chrome/nav/style.scss
+++ b/src/chrome/nav/style.scss
@@ -13,11 +13,11 @@
 }
 
 .mat-divider {
-  margin-top: 16px;
+  margin: 16px 0;
 }
 
 .app-nav-header {
-  padding: 16px 16px 4px 16px;
+  margin-left: 8px;
   font-size: 14px;
   color: gray;
 }
