--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,10 +4,12 @@
 @import 'abstracts/variables';
 @import 'abstracts/mixins';
 
-html, body { height: 100%; }
+html, body {
+  height: 100%;
+  margin: 0;
+}
 
 body {
-  margin: 0;
   font-family: 'Roboto', sans-serif;
   background: #f2f2f2;
 }
