Add shadow to the toolbar

--- a/src/chrome/style.scss
+++ b/src/chrome/style.scss
@@ -3,3 +3,8 @@
   height: 100%;
   flex-flow: column;
 }
+
+.app-toolbar {
+  z-index: 9999;
+  box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
+}
