--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,21 @@ body {
   background: #f2f2f2;
 }
 
+// TODO: Move colors to some theming files
+.app-muted {
+  color: #a2a2a2;
+}
+
+.app-fab {
+  position: fixed !important;
+  bottom: 5 * $baseline-grid !important;
+  right: 5 * $baseline-grid !important;
+}
+
+//////////////////////////////////////////
+// Overrides of Angular Material styles //
+//////////////////////////////////////////
+
 .mat-list-item-content {
   padding: 0 12px !important;
 }
@@ -24,10 +39,6 @@ body {
     font-weight: 500 !important;
   }
 }
-
-//////////////////////////////////////////
-// Overrides of Angular Material styles //
-//////////////////////////////////////////
 
 .mat-progress-spinner {
   margin: 0 auto;
@@ -73,9 +84,4 @@ body {
   &:first-child {
     padding-left: 2 * $baseline-grid !important;
   }
-}
-
-// TODO: Move colors to some theming files
-.app-muted {
-  color: #a2a2a2;
 }
