Add dynamic sidebar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -85,3 +85,7 @@ body {
     padding-left: 2 * $baseline-grid !important;
   }
 }
+
+.mat-sidenav-content {
+  margin-left: 25.5 * $baseline-grid !important;
+}
